Bugfix: Add border color according to Figma Add appropriate spacing for avatar button elements according to Figma

--- a/src/blocks/cards.css
+++ b/src/blocks/cards.css
@@ -3,6 +3,7 @@
   justify-content: center;
   padding-bottom: 40px;
   border-bottom: 1px solid;
+  border-color: #21212166;
   padding-top: 20px;
 }
 
